@@ -880,8 +880,8 @@ const IMLibPageNavigation = {
         })())
       } else {
         let keyField
-        if (INTERMediatorOnPage.dbClassName === 'FileMaker_FX' ||
-          INTERMediatorOnPage.dbClassName === 'FileMaker_DataAPI') {
+        if (INTERMediatorOnPage.dbClassName.match(/FileMaker_FX/) ||
+          INTERMediatorOnPage.dbClassName.match(/FileMaker_DataAPI/)) {
           keyField = currentContextDef.key ? currentContextDef.key : INTERMediatorOnPage.defaultKeyName
         } else {
           keyField = currentContextDef.key ? currentContextDef.key : 'id'
